clusters/prd/apps/homepage/resources.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab
      namespace: envoy-gateway-system
      sectionName: https-apex
  hostnames:
    - lab.jacobdrury.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 3000
          weight: 1
